<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    tools:context="com.example.nazb.styleomega.Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="274dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="-1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.06"
        tools:layout_editor_absoluteY="224dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="276dp"
        android:layout_height="44dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteY="298dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="@color/Darktorq"
        android:hint="@string/log_in"
        android:onClick="onLoginClick"
        android:text="@string/log_in"
        android:textColor="@color/white_opaque"
        android:textColorLink="@color/white_opaque"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="99dp"
        android:layout_height="17dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="16dp"
        android:text="Not a member?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.081"
        android:layout_marginLeft="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="106dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:clickable="true"
        android:onClick="onRegisterClick"
        android:text="@string/register"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Welcome Back!"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp" />

</android.support.constraint.ConstraintLayout>
